--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "gsg-site",
   "version": "1.0.0",
-  "main": "index.html",
+  "main": "main.js",
   "author": "Holben888 <holben888@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "rollup": "^1.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
+    "sirv-cli": "^0.2.3",
     "svelte": "3.0.0-beta.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0"
+  },
+  "scripts": {
+    "build": "npx rollup -c rollup.config.js",
+    "build-watch": "npx rollup --watch -c rollup.config.js",
+    "dev": "npx sirv public --dev"
   }
 }
