change script to predeploy

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "surge": "^0.20.1"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "predeploy": "rollup -c rollup.config.js",
     "deploy": "gh-pages -d public",
     "dev": "yarn build --watch --environment BUILD:development",
     "up": "surge --project ./public --domain gsg.surge.sh"
