--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "author": "Holben888 <holben888@gmail.com>",
   "license": "MIT",
+  "homepage": "http://goldenswarmga.me/gsg-site",
   "dependencies": {
     "rollup": "^1.1.2",
     "rollup-plugin-livereload": "^1.0.0",
